--- a/src/templates/layout/layout.module.scss
+++ b/src/templates/layout/layout.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables';
+
 .layout{
     margin:2rem auto;
     max-width:60rem;
@@ -24,4 +25,5 @@
             border:8px solid gray;
         }
     }
+    font-family:$fontBody;
 }
