--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -1,9 +1,10 @@
 @import '../style/variables';
 .container{
     position: relative;
-    margin-top:2rem;
-    margin-bottom:2rem;
+    margin:2rem auto;
     width:100%;
+    max-height:50vh;
+    overflow: hidden;
     @include breakpoint('lg'){
         width:100%;
         height:auto;
@@ -11,9 +12,4 @@
         margin-left:0;
         margin-right:0;
     }
-    
-    img{
-    }
-    
-    
 }
