--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -3,6 +3,9 @@
 .section{}
 .heading{
     font-family: $fontHeading;
+    font-weight:normal;
+    letter-spacing:0.3em;
+    text-transform: uppercase;
 }
 .description{
     font-family: $fontBody;
