--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -2,6 +2,7 @@
 
 .heading{
     font-family: $fontSizeHeading1;
+    letter-spacing:0.3em;
     text-align:center;
     text-transform:uppercase;
 }
