--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -10,6 +10,7 @@
     position: relative;
 }
 .link{
+    position: relative;
     margin:0.3em;
     padding:0 3rem;
     color:$colorBlue;
@@ -21,8 +22,21 @@
     text-decoration: none;
     text-transform: uppercase;
     width:100%;
-    &:hover{
+    &:before{
+        position: absolute;
+        left:50%;
+        margin-left:-4.5rem;
+        top:0.4rem;
+        content:"";
+        height:0.9rem;
+        width:0;
         background:$colorYellow;
+        z-index:-1;
+        transform: rotate(-1deg);
+        transition: all 100ms;
+    }
+    &:hover{
+       &:before{width:9rem;}
     }
 }
 @include breakpoint('max-width:1023px'){
