--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -1,7 +1,7 @@
 @import '../style/variables';
 .container{
     position: relative;
-    margin:2rem auto;
+    margin:2rem auto 1rem;
     width:100%;
     max-height:50vh;
     overflow: hidden;
