--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -1,17 +1,26 @@
 @import '../style/variables';
-
+.menu{
+    margin:0 0 3rem;
+}
 .section{}
 .heading{
+    margin:0;
+    padding:0;
     font-family: $fontHeading;
+    font-size:$fontSizeHeading1;
     font-weight:normal;
-    letter-spacing:0.3em;
+    letter-spacing:0.2em;
     text-transform: uppercase;
 }
 .description{
+    margin:0 0 1rem;
+    padding:0 0 0.5rem;
     font-family: $fontBody;
     color:$colorBlue;
+    font-size:$fontSizeBody2;
+    line-height:1.3rem;
 }
-.table{
-    margin:12px 0 0;
-    font-family: $fontBody;
+.suhead{
+    margin:1rem 0 0;
+    text-transform: uppercase;
 }
