--- a/src/components/social/social.module.scss
+++ b/src/components/social/social.module.scss
@@ -1,7 +1,8 @@
 @import '../style/variables';
 .socialList{
     display: block;
-    margin:24px auto 0;
+    margin:0 auto;
+    padding:2rem 0 1rem;
     ul{
       margin:0;
       padding:0;
