--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,7 +1,9 @@
 @import '../components/style/variables';
 
 .heading{
-    font-family: $fontSizeHeading1;
+    padding:3rem 0;
+    font-family: $fontHeading;
+    font-size:$fontSizeHeading3;
     letter-spacing:0.3em;
     text-align:center;
     text-transform:uppercase;
@@ -9,9 +11,10 @@
 hr{
     margin:2rem auto;
     border:0;
-    height:1rem;
+    height:2rem;
     width:28rem;
     background:$colorYellow;
+    transform: rotate(0.5deg);
     @include breakpoint('max-width:1023px'){
         margin:2rem 2rem;
         width:auto;
@@ -22,7 +25,7 @@ hr{
     max-width:48rem;
     padding:0 3rem;
     @include breakpoint('max-width:1023px'){
-        padding:0 8rem;
+        padding:0 4rem;
     }
     @include breakpoint('max-width:480px'){
         padding:0 2rem;
