--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -21,6 +21,11 @@
     line-height:1.3rem;
 }
 .suhead{
-    margin:1rem 0 0;
+    margin:1rem 0 0.5rem;
     text-transform: uppercase;
+}
+.columnHeadings{}
+.slimDivide{
+    width:100%;
+    height:0.2rem;
 }
