--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,20 +1,20 @@
 @import '../components/style/variables';
 
 .heading{
-    padding:3rem 0;
+    padding:2rem 0 2rem;
     font-family: $fontHeading;
-    font-size:$fontSizeHeading3;
-    letter-spacing:0.3em;
+    font-size:$fontSizeBody1;
+    letter-spacing:0.5em;
     text-align:center;
     text-transform:uppercase;
 }
 hr{
     margin:2rem auto;
     border:0;
-    height:2rem;
-    width:28rem;
+    height:1rem;
+    width:34rem;
     background:$colorYellow;
-    transform: rotate(0.5deg);
+    transform: rotate(0.3deg);
     @include breakpoint('max-width:1023px'){
         margin:2rem 2rem;
         width:auto;
