--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -13,6 +13,10 @@
         text-transform: uppercase;
         text-align: center;
         letter-spacing:0.4em;
+        @include breakpoint('max-width:375px'){
+            font-size:20px;
+            letter-spacing:0.2em;
+        }
     }
     .body{
         font-family: $fontBody;
@@ -20,5 +24,10 @@
         font-size:$fontSizeBase;
         line-height: 1.5em;
         text-align: center;
+    }
+}
+@include breakpoint('max-width:640px'){
+    .hideMdDown{
+        display:none;
     }
 }
