mobile maps & phone

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,12 +11,14 @@
 }
 .left{
     >div{
-        left:0;
+        position: absolute;
+        right:0;
     }
 }
 .right{
     >div{
-        right:0;
+        position: absolute;
+        left:0;
     }
 }
 .link{
