--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -5,6 +5,9 @@
     .section{
         padding:1rem 0;
     }
+    .subsection{
+        padding:0.1rem 0;
+    }
     .heading{
         margin:0;
         font-family: $fontHeading;
