--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -1,10 +1,11 @@
 @import '../style/variables';
 .container{
     position: relative;
-    margin:2rem auto 3rem;
+    margin:2rem auto 2rem;
     width:100%;
-    max-height:50vh;
+    height:50vh;
     overflow: hidden;
+    text-align: center;
     @include breakpoint('lg'){
         width:100%;
         height:auto;
@@ -14,5 +15,11 @@
     }
     @include breakpoint('md'){
         margin-top:2rem;
+    }
+    img{
+        // position: relative;
+        // margin-top: -25vh;
+        // width: 80%;
+        width:100%;
     }
 }
