--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -2,11 +2,12 @@
 
 .intro{
     margin:0 auto;
+    h2,p{margin:0;}
     .section{
         padding:1rem 0;
     }
     .subsection{
-        padding:0.1rem 0;
+        padding:0rem 0;
     }
     .heading{
         margin:0;
