--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,5 +1,7 @@
 @import '../components/style/variables';
-
+.main{
+    padding-bottom:3rem;
+}
 .heading{
     padding:2rem 0 2rem;
     font-family: $fontHeading;
